--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,7 +5,15 @@
         <link rel="stylesheet" href="CSS/styles.css">
     </head>
     <body>
+        
         <form>
+            <div>
+            <select name="Jahrhunderte" size="1">
+                <option value="23423534">23423534</option>
+                <option value="56776768">56776768</option>
+                <option value="97786565">97786565</option>
+            </select>
+            </div>
             <div>
             <label for="Имя">Имя</label>
             <input type="text" name="Имя" placeholder="Имя"></input>
