--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,13 +5,26 @@
         <link rel="stylesheet" href="CSS/styles.css">
     </head>
     <body>
-        
+    <header>
+            <h1>Was ist Lorem Ipsum?</h1>
+    </header>
+        <nav>
+            <h2>Навигация</h2>
+            <ul>
+                <li><a href="#h3form">Форма ввода</a></li>
+                <li><a href="#h3table">Таблица</a></li>
+                <li><a href="#h3lists">Нумерованный и ненумерованный списки</a></li>
+                <li><a href=""></a></li>
+                <li><a href="#footer1">Футер</a></li>
+            </ul>       
+        </nav>
+        <h3 id="h3form">Форма ввода</h3>
         <form>
             <div>
             <select name="Jahrhunderte" size="1">
-                <option value="23423534">23423534</option>
-                <option value="56776768">56776768</option>
-                <option value="97786565">97786565</option>
+                <option class="option123" value="23423534">23423534</option>
+                <option class="option123" value="56776768">56776768</option>
+                <option class="option123" value="97786565">97786565</option>
             </select>
             </div>
             <div>
@@ -35,15 +48,11 @@
                 <input type="submit" name="Войти">
             </div>
         </form>
-        <header>
-
-        </header>
-        <nav>
-
-        </nav>
+       
         <footer>
 
         </footer>
+        <h3  id="h3table">Таблица</h3>
         <table class="table1">
             <thead>
                 <tr>
@@ -66,6 +75,7 @@
                 </tr>                
             </tbody>    
         </table>
+        <h3 id="h3lists">Нумерованный и ненумерованный списки</h3>
         <details>
         <summary>Variationen</summary>
         <ol>
@@ -77,11 +87,14 @@
         <details>
         <summary>Änderungen</summary>    
         <ul>
-            <li>generierte</li>
             <li>wärend</li>
             <li>somit</li>
         </ul>
         </details>
-        <img src="IMG/geroi-marvel-chelovek-pauk-5.webp" class="img1"/>
+        <!--Это изображение является ссылкой, которая открывается в новом окне-->
+        <a href="Spider-man.html" target="_blank"><img src="IMG/geroi-marvel-chelovek-pauk-5.webp" class="img1"/></a>
+    <footer>
+        <h3 id="footer1">Der Standardteil von Lorem Ipsum</h3>
+        Spenden: Wenn du diese Seite regelmäßig nutzt fände ich es nett, wenn du uns helfen würdest die Seite im Netz zu behalten - bitte beachte, selbst kleine <div></div>Summen helfen die Rechnungen für Hosting und Bandbreite Vielen Dank für deine Hilfe.</div>
+    </footer>      
     </body>
-</html>
