--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,10 +12,11 @@
             <h2>Навигация</h2>
             <ul>
                 <li><a href="#h3form">Форма ввода</a></li>
+                <li><a href="#h3lorem-ipsum">Произвольный текст</a></li>
                 <li><a href="#h3table">Таблица</a></li>
                 <li><a href="#h3lists">Нумерованный и ненумерованный списки</a></li>
-                <li><a href=""></a></li>
-                <li><a href="#footer1">Футер</a></li>
+                <li><a href="#h3spidey">Изображение</a></li>
+                <li><a href="#footer1">Footer</a></li>
             </ul>       
         </nav>
         <h3 id="h3form">Форма ввода</h3>
@@ -49,9 +50,44 @@
             </div>
         </form>
        
-        <footer>
+        <main>
+        <h3 id="h3lorem-ipsum">Произвольный текст</h3>
+        <article>
+            <section>
+            <div><h4>Was ist Lorem Ipsum?</h4></div>
+            <div><span>Lorem Ipsum</span> ist ein einfacher Demo-Text für die Print- und Schriftindustrie.</div> 
+            <div>Lorem Ipsum ist in der Industrie bereits der Standard Demo-Text seit 1500, als ein unbekannter Schriftsteller eine Hand voll Wörter nahm und diese durcheinander warf um ein Musterbuch zu erstellen. </div>
+            <div>Es hat nicht nur 5 Jahrhunderte überlebt, sondern auch in Spruch in die elektronische Schriftbearbeitung geschafft (bemerke, nahezu unverändert).</div>
+            <div>Bekannt wurde es 1960, mit dem erscheinen von "Letraset", welches Passagen von Lorem Ipsum enhielt, so wie Desktop Software wie <span>"Aldus PageMaker"</span> - ebenfalls mit Lorem Ipsum.</div>
+            </section>
+            <section>
+            <div><h4>Wo kommt es her?</h4></div>
+            <div>Glauben oder nicht glauben, Lorem Ipsum ist nicht nur ein zufälliger Text.</div>
+            <div>Er hat Wurzeln aus der Lateinischen Literatur von 45 v. Chr, was ihn über 2000 Jahre alt macht.</div>
+            <div> Richar McClintock, ein Lateinprofessor des <span>Hampden-Sydney College</span> in Virgnia untersuche einige undeutliche Worte, "consectetur", einer Lorem Ipsum Passage und fand eine unwiederlegbare Quelle.</div>
+            <div>Lorem Ipsum komm aus der Sektion 1.10.32 und 1.10.33 des <span>"de Finibus Bonorum et Malorum"</span> (Die Extreme von Gut und Böse) von Cicero, geschrieben 45 v. Chr. Dieses Buch ist Abhandlung der Ethiktheorien, sehr bekannt wärend der Renaissance.</div>
+            <div>Die erste Zeile des Lorem Ipsum, "Lorem ipsum dolor sit amet...", kommt aus einer Zeile der Sektion 1.10.32.</div>
+            <div><span>Der Standardteil von Lorem Ipsum</span>, genutzt seit 1500, ist reproduziert für die, die es interessiert.</div>
+            <div>Sektion 1.10.32 und 1.10.33 von <span>"de Finibus Bonorum et Malroum"</span> von Cicero sind auch reproduziert in ihrer Originalform, abgeleitet von der Englischen Version aus von 1914 (H. Rackham)</div>
+            </section>
+            <section>
+            <div><h4>Warum nutzen wir es?</h4></div>
+            <div>Es ist ein lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird, wenn er sich ein Layout ansieht.</div>
+            <div>Der Punkt, Lorem Ipsum zu nutzen, ist, dass es mehr oder weniger die normale Anordnung von Buchstaben darstellt und somit nach lesbarer Sprache aussieht.</div>
+            <div>Viele Desktop Publisher und Webeditoren nutzen mittlerweile <span>Lorem Ipsum als den Standardtext</span>, auch die Suche im Internet nach "lorem ipsum" macht viele Webseiten sichtbar, wo diese noch immer vorkommen.</div>
+            <div>Mittlerweile gibt es mehrere Versionen des Lorem Ipsum, einige zufällig, andere bewusst (beeinflusst von Witz und des eigenen Geschmacks)</div>
+            </section>
+            <section>
+            <div><h4>Wo kann ich es kriegen?</h4></div>
+            <div>Es gibt viele Variationen der Passages des Lorem Ipsum, aber der Hauptteil erlitt Änderungen in irgendeiner Form, durch Humor oder zufällige Wörter welche nicht einmal ansatzweise glaubwürdig aussehen.</div>
+            <div>Wenn du eine Passage des Lorem Ipsum nutzt, solltest du aufpassen dass in der Mitte des Textes keine ungewollten Wörter stehen.</div>
+            <div>Viele der Generatoren im Internet neigen dazu, vorgefertigte Stücke zu wiederholen - was es nötig machte einen richtigen Generator zu entwickeln.</div>
+            <div>Wir nutzen ein Wörterbuch aus über 200 Lateinischen Wörter, kombiniert mit einer <span>Handvoll Kunstsätzen</span>, welche das Lorem Ipsum glaubwürdig macht.</div>
+            <div>Das generierte Lorem Ipsum ist außerdem frei von Wiederholungen, Humor oder unqualitativen Wörter etc, ...</div>
+            </section>
+        </article>
+        </main>
 
-        </footer>
         <h3  id="h3table">Таблица</h3>
         <table class="table1">
             <thead>
@@ -89,12 +125,14 @@
         <ul>
             <li>wärend</li>
             <li>somit</li>
+            <li>unqualitativen</li>
         </ul>
         </details>
         <!--Это изображение является ссылкой, которая открывается в новом окне-->
+        <h3 id="h3spidey">Изображение</h3>
         <a href="Spider-man.html" target="_blank"><img src="IMG/geroi-marvel-chelovek-pauk-5.webp" class="img1"/></a>
     <footer>
-        <h3 id="footer1">Der Standardteil von Lorem Ipsum</h3>
+        <h3 id="footer1">Der Standardteil von Lorem Ipsum (Footer)</h3>
         Spenden: Wenn du diese Seite regelmäßig nutzt fände ich es nett, wenn du uns helfen würdest die Seite im Netz zu behalten - bitte beachte, selbst kleine <div></div>Summen helfen die Rechnungen für Hosting und Bandbreite Vielen Dank für deine Hilfe.</div>
     </footer>      
     </body>
