--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -52,6 +52,8 @@
        
         <main>
         <h3 id="h3lorem-ipsum">Произвольный текст</h3>
+        <!--Ниже скопирована немецкая версия текста с сайта Lorem Ipsum, внутри есть теги div и span. 
+        Некоторые слова обёрнуты в <span> для того, чтобы показать как этот тег, в отличие от <div>, не разделяет текст на блоки (обёрнутый текст не появляется на отдельной строке)--->
         <article>
             <section>
             <div><h4>Was ist Lorem Ipsum?</h4></div>
@@ -87,8 +89,9 @@
             </section>
         </article>
         </main>
-
+        
         <h3  id="h3table">Таблица</h3>
+        <!--Содержимое таблицы не имеет никакого значения, текст только для заполнения-->
         <table class="table1">
             <thead>
                 <tr>
@@ -132,6 +135,7 @@
         <h3 id="h3spidey">Изображение</h3>
         <a href="Spider-man.html" target="_blank"><img src="IMG/geroi-marvel-chelovek-pauk-5.webp" class="img1"/></a>
     <footer>
+        <!--Текст в футере не имеет смысла, просто скопированный фрагмент из интернета-->
         <h3 id="footer1">Der Standardteil von Lorem Ipsum (Footer)</h3>
         Spenden: Wenn du diese Seite regelmäßig nutzt fände ich es nett, wenn du uns helfen würdest die Seite im Netz zu behalten - bitte beachte, selbst kleine <div></div>Summen helfen die Rechnungen für Hosting und Bandbreite Vielen Dank für deine Hilfe.</div>
     </footer>      
